# bible-embeddings

./: .gitignore  README.md  bible_embeddings.py  clean_bible_analysis.py  count_tokens_per_book.py  notebook_requirements.txt  openai_bible_analysis.py  openai_embed_books.py  pyproject.toml  test_bible_setup.py  test_openai_embedding.py
data/: bible_fulfillment.md  bible_fulfillment_structured.txt
graph/: README.md  docker-compose.yml
graph/import/: constraints.cypher  load_csv.cypher
graph/import/csv/: book_contains_chapter.csv  book_references_edges.csv  chapter_references_edges.csv  fulfills_edges.csv
graph/ingest/: README.md  build_fulfills.py  build_graph.py  build_quotes.py  build_references.py  build_references_from_neon.py  load_csv.cypher  normalize_fulfillment_md.py
graph/viewer/: index.html
marimo_notebooks/: README.md  bible_interactive_analysis.py  requirements.txt
results/data/: book_analysis.csv  book_categories.json  book_similarities.csv
results/graph/csv/: books.csv  chapter_contains_verse.csv  chapters.csv  quotes_edges.csv  references_edges.csv
results/openai_results/: book_token_counts.csv  openai_book_embeddings.csv
results/reports/: bible_enhanced_analysis.md
